--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/Izaakmills/FriendFinder#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3",ls
+    "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "path": "^0.12.7"
   },
